--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "Khatishodai",
+    "name": "fishnmeat",
     "version": "3.0.0",
     "private": true,
-    "author": "Khatishodai",
+    "author": "nurtaj",
 
-    "scripts": {
+"scripts": {
   "dev": "next dev -p 4000",
   "turbo": "next dev --turbo -p 4000",
   "build": "next build",
   "start": "next start -p 4000",
   "lint": "next lint"
 },
+  
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.1",
         "ahooks": "^3.7.8",
