--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
     "author": "nurtaj",
 
 "scripts": {
-  "dev": "next dev -p 8000",
-  "turbo": "next dev --turbo -p 8000",
+  "dev": "next dev -p 4000",
   "build": "next build",
-  "start": "next start -p 8000",
-  "lint": "next lint"
+  "start": "next start -p 4000"
 },
   
     "dependencies": {
