--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-    "name": "fishnmeat",
+    "name": "khatishodai",
     "version": "3.0.0",
     "private": true,
-    "author": "nurtaj",
+    "author": "khatishodai",
 
-"scripts": {
+    "scripts": {
   "dev": "next dev -p 4000",
+  "turbo": "next dev --turbo -p 4000",
   "build": "next build",
-  "start": "next start -p 4000"
+  "start": "next start -p 4000",
+  "lint": "next lint"
 },
   
     "dependencies": {
