--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^4.0.0",
         "lightgallery": "^2.7.2",
+        "lucide": "^0.554.0",
+        "lucide-react": "^0.554.0",
         "moment": "^2.30.1",
         "next": "^14.1.0",
         "prettier": "^3.1.1",
@@ -29,6 +31,7 @@
         "react-cookie": "^7.0.0",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
+        "react-icons": "^5.5.0",
         "react-redux": "^9.0.4",
         "react-slick": "^0.29.0",
         "redux": "^5.0.1",
